@@ -22,7 +22,7 @@ Parallel Port: <tt>/dev/pcfclocks/<i>u</i></tt> or <tt>/dev/pcfclock<i>u</i></tt
 <a href="http://www.conrad-electronic.com/">Conrad Electronic</a> under
 order numbers 967602 and 642002.  This clock is put between a parallel
 port and your printer.  It receives the legal German time, which is
-either CET or CEST, from the DCF77 transmitter and uses it to set
+either CET or CEST, from the DCF77 transmitter and uses it to set its
 internal quartz clock.  The DCF77 transmitter is located near to
 Frankfurt/Main and covers a radius of more than 1500 kilometers.
 
@@ -32,9 +32,9 @@ reference clock driver. Currently device drivers for
 <a href="http://schumann.cx/pcfclock/">FreeBSD</a> are available.</p>
 
 <p>This driver uses C library functions to convert the received
-timecode to UTC and therefore requires that the local timezone be
-CET/CEST.  If your server is not located in Central Europe you have
-to set the environment variable TZ to CET before starting <tt>ntpd</tt>.
+timecode to UTC and thus requires that the local timezone be CET or
+CEST.  If your server is not located in Central Europe you have to set
+the environment variable TZ to CET before starting <tt>ntpd</tt>.
 </p>
 
 <h4>Monitor Data</h4>
@@ -47,7 +47,7 @@ to set the environment variable TZ to CET before starting <tt>ntpd</tt>.
 <dl>
 <dt><tt>time1 <i>time</i></tt></dt>
 <dd>Specifies the time offset calibration factor, in seconds and fraction,
-with default 0.0.</dd>
+with default 0.1725.</dd>
 
 <dt><tt>time2 <i>time</i></tt></dt>
 <dd>Not used by this driver.</dd>
@@ -64,7 +64,8 @@ four characters, with default <tt>PCF</tt>.</dd>
 <dd>Not used by this driver.</dd>
 
 <dt><tt>flag2 0 | 1</tt></dt>
-<dd>Not used by this driver.</dd>
+<dd>If set to 1, the radio clock's synchronisation status bit is
+ignored, ie the timecode is used without a check.</dd>
 
 <dt><tt>flag3 0 | 1</tt></dt>
 <dd>Not used by this driver.</dd>
